--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_localizations: # Add this line
-    sdk: flutter 
+  flutter_localizations:
+    sdk: flutter
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.1.3
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  validators: ^3.0.0
 
 flutter_gen:
   integrations:
@@ -46,13 +45,12 @@ flutter_gen:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -66,13 +64,10 @@ flutter:
     - assets/images/
     - assets/icons/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -82,9 +77,9 @@ flutter:
     - family: dana
       fonts:
         - asset: assets/fonts/DANA-BOLD.TTF
-          weight: 700        
+          weight: 700
         - asset: assets/fonts/DANA-REGULAR.TTF
-          weight: 300  
+          weight: 300
           # style: italic
   #   - family: Trajan Pro
   #     fonts:
