--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_svg: ^1.1.3
   validators: ^3.0.0
   get: ^4.6.5
+  share_plus: ^4.0.10+1
+  url_launcher: ^6.1.5
 flutter_gen:
   integrations:
     flutter_svg: true
