--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.1.3
-  validators: ^3.0.0
   get: ^4.6.5
   share_plus: ^4.0.10+1
   url_launcher: ^6.1.5
+  validators: ^3.0.0
 flutter_gen:
   integrations:
     flutter_svg: true
